--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,26 @@ ext {
     buildToolsVersion = "27.0.3"
     minSdkVersion = 16
     targetSdkVersion = 27
-    versionCode = 1
-    versionName = "1.0"
+    versionCode = 2
+    versionName = "0.9"
 }
 
 buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.google.gms:google-services:3.2.0'
+        classpath 'io.fabric.tools:gradle:1.24.4'
+
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
@@ -21,6 +30,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
