--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -27,3 +27,30 @@ dependencies {
     implementation "android.arch.lifecycle:runtime:1.1.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
 }
+
+ext {
+    bintrayRepo = 'Maven'
+    bintrayName = 'getMeThere'
+
+    publishedGroupId = 'com.arecmetafora'
+    libraryName = 'GetMeThere'
+    artifact = 'getMeThere'
+
+    libraryDescription = 'Views and utilities to help the creation of offline maps and compasses'
+
+    siteUrl = 'https://github.com/arecmetafora/GetMeThere'
+    gitUrl = 'https://github.com/arecmetafora/GetMeThere.git'
+
+    libraryVersion = '0.9.0'
+
+    developerId = 'arecmetafora'
+    developerName = 'Alexander Haroldo da Rocha'
+    developerEmail = 'arec.metafora@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
