--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 }
 
 dependencies {
-    compile project(':lib')
+    compile project(':getMeThere')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.squareup.picasso:picasso:2.71828'
